--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-pdv",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=development babel ./src -d dist",
+    "prepublish": "npm -s run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,8 +15,18 @@
     "type": "git",
     "url": "https://github.com/vicentedealencar/react-pdv.git"
   },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
   "peerDependencies": {
     "react": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
+    "cross-env": "^5.1.6"
   },
   "dependencies": {}
 }
