--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-pdv",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=development babel ./src -d dist",
+    "build": "cross-env NODE_ENV=production babel ./src -d dist",
     "prepublish": "npm -s run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +26,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.1",
-    "cross-env": "^5.1.6"
+    "cross-env": "^5.1.6",
+    "react": "^16.4.0"
   },
   "dependencies": {}
 }
