--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "cross-env NODE_ENV=production yarn build",
     "prepublish": "npm -s run build:prod",
     "prettify": "prettier --write **/*.js !**/dist/**",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -34,9 +34,11 @@
   },
   "devDependencies": {
     "@compositor/kit-cli": "^1.0.37",
+    "@compositor/kit-snapshot": "^1.0.24",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.1",
     "cross-env": "^5.1.6",
+    "jest": "^23.1.0",
     "prettier": "^1.13.4",
     "react": "^16.4.0"
   },
