--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "npm-run-all --parallel start:*",
     "start:examples": "cross-env NODE_ENV=development kit examples --mode library --port 5757 --open",
-    "start:test": "jest --watch --notify",
+    "start:examples:wait": "wait-on http-get://localhost:5757/",
+    "start:dev": "npm-run-all --serial start:examples:wait start:dev:watch",
+    "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 30000 -c \"npm-run-all --serial format test\"",
     "build": "yarn build:prod",
     "build:babel": "babel ./src -d dist",
     "build:dev": "cross-env NODE_ENV=development yarn build:babel --watch",
     "build:prod": "cross-env NODE_ENV=production yarn build:babel",
     "prepublish": "npm-run-all --serial pre-commit build:prod",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
-    "test": "jest",
-    "test:bail": "jest --bail --colors",
+    "test": "jest --notify --colors",
+    "test:bail": "yarn test --bail",
     "pre-commit": "npm-run-all --serial format test:bail"
   },
   "keywords": [],
@@ -48,6 +50,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-react-app": "^3.1.1",
+    "chokidar-cli": "^1.2.0",
     "cross-env": "^5.1.6",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -56,9 +59,10 @@
     "jest": "^23.1.0",
     "npm-run-all": "^4.1.3",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.4.0"
+    "react": "^16.4.0",
+    "wait-on": "^2.1.0"
   },
   "dependencies": {
-    "invariant": "^2.2.4"
+    "numeral": "^2.0.6"
   }
 }
