--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:examples": "cross-env NODE_ENV=development kit examples --mode library --port 5757 --open",
     "start:examples:wait": "wait-on http-get://localhost:5757/",
     "start:dev": "npm-run-all --serial start:examples:wait start:dev:watch",
-    "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 30000 -c \"npm-run-all --serial format test\"",
+    "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 120000 -c \"npm-run-all --serial format test\"",
     "build": "yarn build:prod",
     "build:babel": "babel ./src -d dist",
     "build:dev": "cross-env NODE_ENV=development yarn build:babel --watch",
@@ -16,6 +16,7 @@
     "prepublish": "npm-run-all --serial pre-commit build:prod",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
     "test": "jest --notify --colors",
+    "test:update": "yarn test --updateSnapshot",
     "test:bail": "yarn test --bail",
     "pre-commit": "npm-run-all --serial format test:bail"
   },
