--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cross-env": "^5.1.6",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
     "husky": "^1.0.0-rc.8",
     "jest": "^23.1.0",
