--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -12,8 +12,9 @@
     "build": "yarn build:prod",
     "build:babel": "babel ./src -d dist",
     "build:dev": "cross-env NODE_ENV=development yarn build:babel --watch",
-    "build:prod": "cross-env NODE_ENV=production yarn build:babel",
-    "prepublish": "npm-run-all --serial test:format build:prod",
+    "build:prod": "cross-env NODE_ENV=production yarn build:rollup",
+    "build:rollup": "rollup --config",
+    "prepublish": "npm-run-all --serial build:prod",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
     "test": "jest --notify --colors",
     "test:update": "yarn test --updateSnapshot",
@@ -55,6 +56,7 @@
     "@compositor/kit-snapshot": "^1.0.24",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -71,6 +73,10 @@
     "npm-run-all": "^4.1.3",
     "prettier-eslint-cli": "^4.7.1",
     "react": "^16.4.0",
+    "rollup": "^0.60.7",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "wait-on": "^2.1.0"
   },
   "dependencies": {
