--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -10,11 +10,12 @@
     "start:dev": "npm-run-all --serial start:examples:wait start:dev:watch",
     "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 120000 -c \"npm-run-all --serial format test\"",
     "build": "yarn build:prod",
+    "build:clean": "rimraf ./dist",
+    "build:rollup": "rollup --config",
     "build:babel": "babel ./src -d dist",
     "build:dev": "cross-env NODE_ENV=development yarn build:babel --watch",
     "build:prod": "cross-env NODE_ENV=production yarn build:rollup",
-    "build:rollup": "rollup --config",
-    "prepublish": "npm-run-all --serial build:prod",
+    "prepublish": "npm-run-all --serial build:clean build:prod",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
     "test": "jest --notify --colors",
     "test:update": "yarn test --updateSnapshot",
@@ -73,6 +74,7 @@
     "npm-run-all": "^4.1.3",
     "prettier-eslint-cli": "^4.7.1",
     "react": "^16.4.0",
+    "rimraf": "^2.6.2",
     "rollup": "^0.60.7",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
