--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -10,12 +10,12 @@
     "start:dev": "npm-run-all --serial start:examples:wait start:dev:watch",
     "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 120000 -c \"npm-run-all --serial format test\"",
     "build": "yarn build:prod",
-    "build:clean": "rimraf ./dist",
+    "build:clean": "rimraf ./dist/*",
     "build:rollup": "rollup --config",
     "build:babel": "babel ./src -d dist",
-    "build:dev": "cross-env NODE_ENV=development yarn build:babel --watch",
+    "build:dev": "cross-env NODE_ENV=development yarn build:babel",
+    "build:dev:watch": "yarn build:dev --watch",
     "build:prod": "cross-env NODE_ENV=production yarn build:rollup",
-    "prepublish": "npm-run-all --serial build:clean build:prod",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
     "test": "jest --notify --colors",
     "test:update": "yarn test --updateSnapshot",
@@ -68,6 +68,7 @@
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.9.1",
     "husky": "^1.0.0-rc.8",
     "jest": "^23.1.0",
