--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "react-pdv",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "",
   "main": "dist/index.js",
+  "module": "src/index.js",
   "scripts": {
-    "now-start": "cross-env NODE_ENV=production kit examples --mode library",
-    "now-build": "echo build?",
     "start": "npm-run-all --parallel start:*",
     "start:examples": "cross-env NODE_ENV=development kit examples --mode library --port 5757 --open",
     "start:examples:wait": "wait-on http-get://localhost:5757/",
     "start:dev": "npm-run-all --serial start:examples:wait start:dev:watch",
     "start:dev:watch": "chokidar \"**/*.js\" -i \"**/dist/**\" -i \"**/node_modules/**\" --initial --debounce 120000 -c \"npm-run-all --serial format test\"",
+    "build": "yarn build:prod:babel",
     "build:clean": "rimraf ./dist/*",
-    "build:rollup": "rollup --config",
-    "build:babel": "babel ./src -d dist",
+    "build:babel": "babel src -d dist",
     "build:dev": "cross-env NODE_ENV=development yarn build:babel",
     "build:dev:watch": "yarn build:dev --watch",
-    "build:prod": "cross-env NODE_ENV=production yarn build:babel",
+    "build:prod:babel": "cross-env NODE_ENV=production yarn build:babel",
+    "build:rollup": "rollup -c",
     "build:prod:rollup": "cross-env NODE_ENV=production yarn build:rollup",
+    "prepublishOnly": "npm-run-all --serial build:clean build",
     "format": "prettier-eslint --write **/*.js !**/dist/**",
     "test": "jest --notify --colors",
     "test:update": "yarn test --updateSnapshot",
