--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -36,12 +36,6 @@
     "singleQuote": true,
     "semi": false
   },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react|react-pdv)/)",
-      "**/*.test.js"
-    ]
-  },
   "x0": {
     "config": "library/x0.config.js"
   },
@@ -57,6 +51,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.6",
     "eslint-config-standard": "^11.0.0",
