--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,29 @@
 {
   "presets": [
-    "react",
-    "env"
+    "react"
   ],
   "plugins": [
     "transform-class-properties",
     "transform-object-rest-spread"
-  ]
+  ],
+  "env": {
+    "commonjs": {
+      "presets": [
+        ["env", { "loose": true }]
+      ]
+    },
+    "es": {
+      "presets": [
+        ["env", { "modules": false, "loose": true }]
+      ]
+    },
+    "rollup": {
+      "presets": [
+        ["env", { "modules": false, "loose": true }]
+      ],
+      "plugins": [
+        "external-helpers"
+      ]
+    }
+  }
 }
