--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "react-pdv",
-  "version": "0.0.24",
+  "version": "0.0.32",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "scripts": {
     "start": "kit ./library/examples/ --mode library",
-    "build": "cross-env NODE_ENV=production rollup -c",
-    "prepare": "yarn build",
+    "prepare": "npm-run-all --serial clean build",
+    "build": "npm-run-all --serial build:**",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir dist/lib",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir dist/es",
+    "build:umd": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c -o dist/react-pdv.js",
+    "build:umd:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c -o dist/react-pdv.min.js",
     "now-start": "cross-env NODE_ENV=production x0 dev library/App.js --port 5757",
     "deploy": "now",
     "test": "jest --notify --colors",
@@ -45,6 +49,7 @@
     "@compositor/kit-cli": "^1.0.37",
     "@compositor/kit-snapshot": "^1.0.24",
     "@compositor/x0": "^5.0.8",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -67,10 +72,12 @@
     "rollup": "^0.60.7",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^4.0.0"
   },
   "dependencies": {
-    "numeral": "^2.0.6",
-    "rollup-plugin-peer-deps-external": "^2.1.1"
+    "numeral": "^2.0.6"
   }
 }
