--- a/.babelrc
+++ b/.babelrc
@@ -24,6 +24,15 @@
       "plugins": [
         "external-helpers"
       ]
+    },
+    "testing": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "current"
+          }
+        }]
+      ]
     }
   }
 }
