--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "description": "",
   "main": "dist/lib/index.js",
   "module": "dist/es/index.js",
@@ -15,7 +15,7 @@
     "build:umd:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c -o dist/react-pdv.min.js",
     "now-start": "cross-env NODE_ENV=production x0 dev library/App.js --port 5757",
     "deploy": "now",
-    "test": "jest --notify --colors",
+    "test": "cross-env BABEL_ENV=testing jest --notify --colors",
     "test:update": "yarn test --updateSnapshot",
     "test:bail": "yarn test --bail",
     "test:format": "npm-run-all --serial test format",
