--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdv",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "",
   "main": "dist/lib/index.js",
   "module": "dist/es/index.js",
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "kit ./library/examples/ --mode library",
     "prepare": "npm-run-all --serial clean build",
+    "prepublish": "npm-run-all --serial test",
     "build": "npm-run-all --serial build:**",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir dist/lib",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir dist/es",
