--- a/main/.eslintrc
+++ b/main/.eslintrc
@@ -1,7 +1,6 @@
 {
   "env": {
-    "es6": true,
-    "jest": true
+    "es6": true
   },
   "extends": ["standard", "standard-react"],
   "rules": {
