--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   "scripts": {
     "start": "yarn workspace react-pdv-library start",
     "build": "yarn workspace react-pdv build",
-    "build:cjs": "yarn workspace react-pdv build:commonjs",
-    "test": "npm-run-all --serial build test:library",
-    "test:watch": "npm-run-all --parallel build:cjs test:library --watch",
-    "howto:test:library": "yarn test:library --rootDir=$(pwd)",
+    "test": "bash -c 'yarn test:library --rootDir=${1-.}' -- $(pwd)",
     "test:library": "yarn workspace react-pdv-library test --modulePaths=library --modulePaths=main --testMatch=**/*.test.js"
   },
   "devDependencies": {
