--- a/main/package.json
+++ b/main/package.json
@@ -73,7 +73,5 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^4.0.0"
   },
-  "dependencies": {
-    "numeral": "^2.0.6"
-  }
+  "dependencies": {}
 }
