--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pdv-root",
+  "name": "react-pdv-workspaces",
   "version": "1.0.0",
   "description": "React component library for cross-platform offline applications",
   "main": "index.js",
@@ -12,12 +12,12 @@
     "library"
   ],
   "scripts": {
-    "start": "npm-run-all --parallel build:es start:library",
+    "start": "npm-run-all --parallel \"build:es --watch\" start:library",
     "start:library": "yarn workspace react-pdv-library start",
     "build": "yarn workspace react-pdv build",
-    "build:es": "yarn workspace react-pdv build:es --watch",
+    "build:es": "yarn workspace react-pdv build:es",
     "build:cjs": "yarn workspace react-pdv build:commonjs",
-    "test:watch": "npm-run-all --parallel build:cjs test --watch",
+    "test:watch": "npm-run-all --parallel \"build:cjs --watch\" \"test --watchAll\"",
     "test": "cross-env BABEL_ENV=testing jest --notify --colors --testMatch=**/*.test.js"
   },
   "devDependencies": {
